--- a/art.html
+++ b/art.html
@@ -1,1 +1,10 @@
-<!-- #include file="nav.html" -->
+<!doctype html>
+<html lang="en">
+<head>
+<!-- #include file="header.html" -->
+<div class="content">
+  <h1>artwork below</h1>
+  <h2>this is a piece of art</h2>
+  <p>art here</p>
+</div>
+<!-- #include file="footer.html" -->
