--- a/art.html
+++ b/art.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="utf-8">
+    <title>My Artwork</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="frog-king-pixilart.gif" rel="icon">
+  </head>
 <!-- #include file="header.html" -->
 <div class="content">
   <h1>artwork below</h1>
