added gulp-include thing

--- a/art.html
+++ b/art.html
@@ -6,10 +6,13 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="frog-king-pixilart.gif" rel="icon">
   </head>
-<!-- #include file="header.html" -->
-<div class="content">
-  <h1>artwork below</h1>
-  <h2>this is a piece of art</h2>
-  <p>art here</p>
-</div>
-<!-- #include file="footer.html" -->
+  <body>
+    @@include('./header.html')
+  <div class="content">
+    <h1>artwork below</h1>
+    <h2>this is a piece of art</h2>
+    <p>art here</p>
+  </div>
+    @@includes('./footer.html')
+  </body>
+</html>
