Updated to match repl version

--- a/index.html
+++ b/index.html
@@ -2,31 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>Doduodrio</title>
+    <meta name="theme-color" content="#14692f">
+    <meta property="og:title" content="Doduodrio's Website">
+    <meta property="og:description" content="Take a deep breath.">
+    <meta property="og:url" content="https://doduodrio.isaacisawesome.repl.co/index.html">
+    <meta property="og:image" content="https://doduodrio.isaacisawesome.repl.co/images/frog king pixilart zoomed large frame 1.png">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="frog-king-pixilart.gif" rel="icon">
+    <link href="/images/frog king pixilart zoomed.gif" rel="icon">
   </head>
   <body>
     <div class="webpage">
     <header><div class="header">
-      <img src="corn maze pixilart.gif" alt="Corn Maze gif" title="The Frog King welcomes you!">
-      <h1 class="important"><a href="">Doduodrio's Website</a></h1>
+      <img src="/images/corn maze pixilart.gif" alt="Corn Maze gif" title="The Frog King welcomes you!">
+      <h1 class="important"><a href="/index.html">Doduodrio's Website</a></h1>
+      <h3 class="important"><em>Take a deep breath.</em></h3>
     </div></header>
     <div class="container">
     <div class="sidebar">
       <h2>Directory</h2>
-      <h3><a href="">Main Page</a></h3>
+      <h3><a href="/index.html">Main Page</a></h3>
       <h3><a href="/art.html">My Artwork</a></h3>
     </div>
+    <!-- When copying header, stop here. -->
     <div class="content">
       <h1>Site Updates</h1>
       <h2>Wednesday, May 3rd, 2023</h2>
+      <p>...and I did just that! Now there's a tab called "My Artwork" under the directory which leads to a page with some of my art. Nice!</p>
+      <p>I also updated the site icon to be a more zoomed in version of the Frog King so that it's more clear what it is.</p>
+      <p>The next thing to do is to add a games tab to showcase games that I've made...</p>
+      <p>It took me a while, but I managed to get a website preview working! So, when you send a message with this website's link in Discord, it will display a little preview of this website with an image of the Frog King! Took me long enough...</p>
+      <h2>Tuesday, May 2nd, 2023</h2>
       <p>Yay, I finally got this site to work! Time to get to work adding content. Maybe I will add an art gallery to showcase my art.</p>
     </div>
+    <!-- When copying footer, start here. -->
     </div>
     <footer><div class="footer">
       <p class="important">© 2023 Doduodrio</p>
-    </div></footer>
+  </div></footer>
     </div>
   </body>
 </html>
