Updated icon to have proper filetype

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://doduodrio.isaacisawesome.repl.co/index.html">
     <meta property="og:image" content="https://doduodrio.isaacisawesome.repl.co/images/frog king pixilart zoomed large frame 1.png">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="/images/frog king pixilart zoomed large frame 1.gif" rel="icon">
+    <link href="/images/frog king pixilart zoomed large frame 1.png" rel="icon">
   </head>
   <body>
     <div class="webpage">
