--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://doduodrio.isaacisawesome.repl.co/index.html">
     <meta property="og:image" content="https://doduodrio.isaacisawesome.repl.co/images/frog king pixilart zoomed large frame 1.png">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="/images/frog king pixilart zoomed large frame 1.png" rel="icon">
+    <link href="/images/frog king pixilart zoomed.gif" rel="icon">
   </head>
   <body>
     <div class="webpage">
@@ -25,6 +25,7 @@
       <h2>Directory</h2>
       <h3><a href="/index.html">Main Page</a></h3>
       <h3><a href="/art.html">My Artwork</a></h3>
+      <h3><a href="/games.html">My Games</a></h3>
     </div>
     <!-- When copying header, stop here. -->
     <div class="content">
