--- a/art.html
+++ b/art.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://doduodrio.isaacisawesome.repl.co/index.html">
     <meta property="og:image" content="https://doduodrio.isaacisawesome.repl.co/images/frog king pixilart zoomed large frame 1.png">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="/images/frog king pixilart zoomed large frame 1.png" rel="icon">
+    <link href="/images/frog king pixilart zoomed.gif" rel="icon">
   </head>
   <body>
     <div class="webpage">
@@ -25,18 +25,19 @@
       <h2>Directory</h2>
       <h3><a href="/index.html">Main Page</a></h3>
       <h3><a href="/art.html">My Artwork</a></h3>
+      <h3><a href="/games.html">My Games</a></h3>
     </div>
     <!-- When copying header, stop here. -->
     <div class="content">
       <h1>My Artwork</h1>
-      <h2>Farmer, Frog King, and Scarecrow</h2>
-      <img class="thumbnail" src="/images/corn maze pixilart.gif" alt="Farmer, Frog King, and Scarecrow">
-      <p>You've probably seen this gif at the top of the page. It depicts three characters from my game, Corn Maze.</p>
-      <h2>DDD Profile Picture</h2>
-      <img class="thumbnail" src="/images/ddd profile picture pixilart large.png" alt="DDD Profile Picture">
+      <h2><a href="https://www.pixilart.com/art/corn-maze-sr2340d3cc7cfeb" rel="noreferrer noopener" target="_blank">Farmer, Frog King, and Scarecrow</a></h2>
+      <img class="thumbnail" src="/images/corn maze pixilart.gif" alt="Farmer, Frog King, and Scarecrow" title="They're enjoying a nice, peaceful autumn day!">
+      <p>You've probably seen this gif at the top of the page. It depicts three characters from my game, <a href="https://scratch.mit.edu/projects/796189129/" rel="noreferrer noopener" target="_blank">Corn Maze</a>.</p>
+      <h2><a href="https://www.pixilart.com/art/ddd-sr25edf325d6cdb" rel="noreferrer noopener" target="_blank">DDD Profile Picture</a></h2>
+      <img class="thumbnail" src="/images/ddd profile picture pixilart large.png" alt="DDD Profile Picture" title="I have a red sweater just like this!">
       <p>A profile picture I drew for myself using the pixel art website Pixilart. I usually use this profile picture on websites.</p>
-      <h2>Wigglytuff</h2>
-      <img class="thumbnail" src="/images/wigglytuff pixilart large.png" alt="Wigglytuff">
+      <h2><a href="https://www.pixilart.com/art/wigglytuff-gen-1-sr24ea4fdd79873" rel="noreferrer noopener" target="_blank">Wigglytuff</a></h2>
+      <img class="thumbnail" src="/images/wigglytuff pixilart large.png" alt="Wigglytuff" title="Puup pupuu...?">
       <p>A sprite of Wigglytuff in the style of Gameboy Color sprites. I think it looks rather cute, don't you think?</p>
     </div>
     <!-- When copying footer, start here. -->
